logs/pyak47.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyak47'...
Compiling './lib/python3.5/site-packages/pyak47/core.py'...
***   File "./lib/python3.5/site-packages/pyak47/core.py", line 111
    except Exception, e:  # test runner catches all script exceptions here
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyak47/dependency_checker.py'...
***   File "./lib/python3.5/site-packages/pyak47/dependency_checker.py", line 17
    print 'sorry, no py3k support yet'
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyak47/graph.py'...
***   File "./lib/python3.5/site-packages/pyak47/graph.py", line 17
    print 'ERROR: can not import Matplotlib. install Matplotlib to generate graphs'
                                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyak47/results.py'...
***   File "./lib/python3.5/site-packages/pyak47/results.py", line 23
    print 'transactions: %i' % results.total_transactions
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyak47/resultsloader.py'...
***   File "./lib/python3.5/site-packages/pyak47/resultsloader.py", line 22
    print "(optional: please install sqlalchemy to enable db logging)"
                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyak47/resultswriter.py'...
***   File "./lib/python3.5/site-packages/pyak47/resultswriter.py", line 30
    os.makedirs(self.output_dir, 0755)
                                    ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/pyak47/rpcserver.py'...
***   File "./lib/python3.5/site-packages/pyak47/rpcserver.py", line 20
    print '\nMulti-Mechanize: %s listening on port %i' % (bind_addr, port)
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyak47/script_loader.py'...
***   File "./lib/python3.5/site-packages/pyak47/script_loader.py", line 55
    raise InvalidScriptError, problem
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyak47/utilities'...
Compiling './lib/python3.5/site-packages/pyak47/utilities/run.py'...
***   File "./lib/python3.5/site-packages/pyak47/utilities/run.py", line 110
    print '\n  user_groups:  %i' % len(user_groups)
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyak47-1.2.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
